fix(navbar-hamburger-menu): Display button to go back to home page on mobile - detect if the user is on mobile - display the back-home button on:  ~ home-page,  ~ search-page,  ~ not-found-page and single-article page [Fixes #167166967]

--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -8,6 +8,14 @@
     width: 40%;
   }
 
+  .logo-container {
+    cursor: pointer;
+    .mobile-logo {
+      width: 43px;
+      height: 40px;
+    }
+  }
+
   #dropdown-basic {
     .dropdown-menu {
       position: absolute;
